2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (union_writer): New function.
	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile an union writer for
	unions.
	(pkl_gen_pr_type_struct): Likewise.
	(LMAP): Likewise.
	* testsuite/poke.map/write-unions-1.pk: New test.
	* testsuite/poke.map/write-unions-2.pk: Likewise.
	* testsuite/poke.map/write-unions-3.pk: Likewise.
	* testsuite/poke.map/ass-map-23.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_mapper): Fix backing up of GEN
	endianness.
	(struct_field_writer): Likewise.

2022-01-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/btf-dump.pk (btf_dump_type_vdata): Use EXCOND operator.
	* pickles/ctf-dump.pk (ctf_dump_vlen_data): Likewise.

2022-01-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_inserter): Remove comment.
	* etc/poke.rec (Support for optional fields in integral structs):
	Remove as not applicable.

2022-01-02  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Allow splitting lines in RAS with \ at EOL):
	Remove as done.

2022-01-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: New rule to join continuation lines separated with
	\.
	* libpoke/pkl-gen.pks (struct_field_extractor): Split long lines.
	(struct_mapper): Likewise.
	(deint_extract_field_value): Likewise.
	(struct_deintegrator): Likewise.

2022-01-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (field_location_str): New macro.
	(check_struct_field_constraint): Use field_location_str.
	(struct_field_mapper): Add location error message when EOF is
	raised while mapping.
	* testsuite/poke.map/maps-structs-eof-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-02  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_load_file): Handle return value of
	pk_file_readable the proper way.
